--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
   padding-top: 1rem;
   padding-bottom: 2rem;
   box-sizing: border-box;
-  width:340px;
-  height:500px;
+  width:375px;
+  height:565  px;
 }
 
 label {
@@ -17,13 +17,54 @@ label {
     float: left;
 }
 
-.exp{visibility: hidden;}
+.exp{
+  visibility: hidden;
+  opacity: 0;
+  height: 0px;
+  transition:visibility 0.3s linear,opacity 0.3s linear, height .4s ease;
+}
 
 .text{
   text-align:center;
   color: rgb(88 199 250 / 100%);
 }
 
+.tooltip {
+  position: relative;
+}
+
+.w0 {
+  width: 250px;
+  left: -825%;
+  padding: 5px 0;
+}
+
+.w1{
+  width: 165px;
+  left: -1000%;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  border: 1px solid white;
+  background-color: rgb(80, 90, 127);
+  color: rgba(255, 255, 255, 0.65);
+  text-align: center;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+  bottom: 150%;
+  opacity: 0;
+  transition: opacity 1s;
+  font-size:12px;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
 :root {
     --form-control-color: white ;
   }
@@ -87,8 +128,48 @@ label {
     /* Windows High Contrast Mode */
     background-color: CanvasText;
   }
-  
+
   input[type="checkbox"]:checked::before {
     transform: scale(1);
   }
-  
+  button {
+    --border: 5px;    /* the border width */
+    --slant: 0.7em;   /* control the slanted corners */
+    --color: #37E8FC; /* the color */
+    
+    font-size: 14px;
+    padding: 0.4em 1.2em;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+    color: var(--color);
+    background: 
+       linear-gradient(to bottom left,var(--color)  50%,#0000 50.1%) top right,
+       linear-gradient(to top   right,var(--color)  50%,#0000 50.1%) bottom left;
+    background-size: calc(var(--slant) + 1.3*var(--border)) calc(var(--slant) + 1.3*var(--border));
+    background-repeat: no-repeat;
+    box-shadow:
+      0 0 0 200px inset var(--s,#0000),
+      0 0 0 var(--border) inset var(--color);
+    clip-path: 
+        polygon(0 0, calc(100% - var(--slant)) 0, 100% var(--slant),
+                100% 100%, var(--slant) 100%,0 calc(100% - var(--slant))
+               );
+    transition: color var(--t,0.3s), background-size 0.3s;
+  }
+  button:focus-visible {
+    outline-offset: calc(-1*var(--border));
+    outline: var(--border) solid #000c;
+    clip-path: none;
+    background-size: 0 0;
+  }
+  button:hover,
+  button:active{
+    background-size: 100% 100%;
+    color: #fff;
+    --t: 0.2s 0.1s;
+  }
+  button:active {
+    --s: #0005;
+    transition: none;
+  }
