--- a/style.css
+++ b/style.css
@@ -10,11 +10,27 @@ body {
   height:565  px;
 }
 
+.header{
+  margin-block-end:0em;
+}
+
+.subhead{
+  margin-block-start:0em;
+}
+
+.points{
+  margin-block-end:0em;
+}
+
 label {
     color: rgb(88 199 250 / 100%);
     display: block;
     padding-right:12px;
     float: left;
+}
+
+.hidden{
+  display: none;
 }
 
 .exp{
@@ -31,6 +47,7 @@ label {
 
 .tooltip {
   position: relative;
+  margin-block-end: 0em;
 }
 
 .w0 {
@@ -59,6 +76,10 @@ label {
   opacity: 0;
   transition: opacity 1s;
   font-size:12px;
+}
+
+#plan{
+  margin-bottom: 1rem;
 }
 
 .tooltip:hover .tooltiptext {
@@ -94,6 +115,14 @@ label {
     margin-top: 1em;
   }
   
+#first{
+  margin-bottom: 1rem;
+}
+
+#last{
+  margin-bottom: 0.5rem;
+}
+
   input[type="checkbox"] {
     /* Add if not using autoprefixer */
     -webkit-appearance: none;
@@ -133,10 +162,10 @@ label {
     transform: scale(1);
   }
   button {
-    --border: 5px;    /* the border width */
-    --slant: 0.7em;   /* control the slanted corners */
-    --color: #37E8FC; /* the color */
-    
+    --border: 2px;    /* the border width */
+    --slant: 0.5em;   /* control the slanted corners */
+    --color: #58c7fa; /* the color */
+    margin-left:1rem;
     font-size: 14px;
     padding: 0.4em 1.2em;
     border: none;
