--- a/style.css
+++ b/style.css
@@ -11,15 +11,19 @@ body {
 }
 
 .header{
-  margin-block-end:0em;
+  margin-block-end: 0em;
 }
 
 .subhead{
-  margin-block-start:0em;
+  margin-block-start: 0em;
 }
 
 .points{
-  margin-block-end:0em;
+  margin-block-end: 0em;
+}
+
+.cDaily{
+  margin-block-end: 0em;
 }
 
 label {
@@ -62,7 +66,7 @@ label {
 
 .w2{
   width: 250px;
-  left: -1440%;
+  left: -1400%;
 }
 
 .tooltip .tooltiptext {
@@ -76,7 +80,7 @@ label {
   z-index: 1;
   bottom: 150%;
   opacity: 0;
-  transition: opacity 1s;
+  transition: opacity .5s linear;
   font-size:12px;
   padding:5px;
 }
@@ -208,4 +212,10 @@ label {
 
   input[type="number"]{
     width:90px;
+  }
+
+  .contact h1, .contact h2{
+    padding-top: 10px;
+    font-size: 12px;
+    text-align: right;
   }
